# oh-my-kimi

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  COVERAGE.md  Cargo.toml  DEMO.md  README.de.md  README.el.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.pl.md  README.pt.md  README.ru.md  README.tr.md  README.vi.md  README.zh-TW.md  README.zh.md  package-lock.json  package.json
.omk/: metrics.json
docs/: _config.yml  agents.html  clawhip-event-contract.md  getting-started.html  guidance-schema.md  hooks-extension.md  index.html  integrations.html  interop-team-mutation-contract.md  migration-mainline-post-v0.4.4.md  oh-my-kimi-v1-compatibility.md  openclaw-integration.de.md  openclaw-integration.es.md  openclaw-integration.fr.md  openclaw-integration.it.md  openclaw-integration.ja.md  openclaw-integration.ko.md  openclaw-integration.md  openclaw-integration.pt.md  openclaw-integration.ru.md  openclaw-integration.tr.md  openclaw-integration.vi.md  openclaw-integration.zh-TW.md  openclaw-integration.zh.md  prompt-guidance-contract.md  prompt-migration-changelog.md  qa-plan-0.4.2.md  release-body-0.9.0.md  release-body-0.9.1.md  release-notes-0.11.12.md  release-notes-0.7.6.md  release-notes-0.8.1.md  release-notes-0.8.2.md  release-notes-0.8.3.md  release-notes-0.8.4.md  release-notes-0.8.5.md  release-notes-0.8.6.md  release-notes-0.8.7.md  release-notes-0.8.8.md  release-notes-0.8.9.md  (+3 more)
missions/: README.md
playground/: README.md
prompts/: analyst.md  build-fixer.md  executor.md  explore-harness.md  explore.md  (+7 more)
(+360 files in other folders)
