[workspace]
members = [
  "crates/omk-explore",
  "crates/omk-mux",
  "crates/omk-runtime-core",
  "crates/omk-runtime",
  "crates/omk-sparkshell",
]
resolver = "2"

[workspace.package]

version = "0.11.15"

edition = "2021"
license = "MIT"
repository = "https://github.com/Yeachan-Heo/oh-my-codex"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
